Show placeholder text when dropdown checkbox has no options

--- a/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
+++ b/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
@@ -17,6 +17,10 @@
       {% if group %}
         </div></div>
       {% endif %}
+    {% empty %}
+    <div class="dropdown-item">
+      <em>No items to choose from</em>
+    </div>
     {% endfor %}
   </div>
 </div>
