--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 <div class="container">
 
     {% if metadata %}
@@ -65,9 +67,16 @@
         </div>
 
         <div class="mt-5 col-4">
-
-
         </div>
+    </div>
+
+    <div class="container">
+        {% if r0_json_data %}
+        <div class="mb-5">
+            <h4>r<sub>0</sub></h4>
+            {% include "frontend/data_cube_detail/r0graph.html" %}
+        </div>
+        {% endif %}
     </div>
 
     <div class="container">
