--- a/frontend/templates/frontend/data_cube_detail/r0graph.html
+++ b/frontend/templates/frontend/data_cube_detail/r0graph.html
@@ -12,20 +12,38 @@
         data1.push([ jsonData['r0_timestamps'][i], jsonData['r0_1'][i] ]);
     }
 
+    /*
+    const scatterTestData = [
+        [data0[Math.round(data0.length / 4)][0], 0.00, 'Scan'],
+        [data0[Math.round(data0.length / 2)][0], 0.00, 'Scan'],
+        [data0[Math.round(3 * data0.length / 4)][0], 0.00, 'Scan']
+    ];
+    */
+
     var options = {
-      colors: ['#000000', '#00aa00'],
+      colors: ['#000000', '#00aa00'/*, '#4477ff' */],
       chart: {
-        type: 'line',
         width: '100%',
         height: '300px'
       },
       series: [{
           name: 'Black',
+          type: 'line',
           data: data1
         }, {
           name: 'Green',
+          type: 'line',
           data: data0
-      }],
+      },/* {
+          name: 'Events',
+          type: 'scatter',
+          data: scatterTestData
+      } */],
+      /*
+      markers: {
+        size: [0, 0, 6]
+      },
+      */
       xaxis: {
         type: 'datetime',
         title: {
@@ -39,9 +57,9 @@
         },
       },
       yaxis: {
-        tickAmount: 3,
-        min: 0.05,
-        max: 0.20,
+        tickAmount: 5,
+        min: 0.00,
+        max: 0.25,
         forceNiceScale: true,
         decimalsInFloat: 2,
         title: {
