--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -40,7 +40,7 @@
             <td scope="row">
                 <a href="{% url 'data_cube_detail' metadata.filename %}">
                 {% if metadata.thumbnail %}
-                <img style="width: 50%" src="{% static metadata.thumbnail %}"/>
+                <img style="" src="{{metadata.thumbnail.url}}"/>
                 {% else %}
                 {{ metadata.oid }}
                 {% endif %}
