--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -18,7 +18,7 @@
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             <figure class="figure">
             {% if data_cube.animated_preview %}
-            <img src="{% static data_cube.animated_preview.animated_gif %}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
+            <img src="{{ data_cube.animated_preview.full_size.url }}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
             {% elif data_cube.previews %}
             <img src="{{data_cube.previews.full_size.url}}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
             {% endif %}
