--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -17,9 +17,9 @@
 
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             <figure class="figure">
-            {% if data_cube.animated_preview %}
-            <img src="{{ data_cube.animated_preview.full_size.url }}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
-            {% elif data_cube.previews %}
+            {% if data_cube.animated_preview and data_cube.animated_preview.full_size %}
+            <img src="{{data_cube.animated_preview.full_size.url}}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
+            {% elif data_cube.previews and data_cube.previews.full_size %}
             <img src="{{data_cube.previews.full_size.url}}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
             {% endif %}
             </figure>
