--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -57,10 +57,11 @@
                 </tr>
 
                 <tr>
-                    <td>Download:</td>
+                    <td>Download:
+                        <p><small class="text-muted">{{ data_cube.filename }}</small></p>
+                    </td>
                     <td>
                     <a class="btn btn-primary" href="{% url 'download_data_cube' data_cube.filename %}"><i class="bi bi-download"></i> Download FITS data cube ({{ data_cube.size|filesizeformat }})</a>
-                        <small class="text-muted">{{ data_cube.filename }}</small>
                     </td>
                 </tr>
             </table>
