--- a/frontend/templates/frontend/data_cube_detail/r0graph.html
+++ b/frontend/templates/frontend/data_cube_detail/r0graph.html
@@ -26,7 +26,10 @@
       colors: ['#00aa00', '#000000', '#4477ff'],
       chart: {
         width: '100%',
-        height: '300px'
+        height: '300px',
+        animations: {
+          enabled: false,
+        }
       },
       series: [{
           name: 'Green',
