Introduce page footer to space out layout

--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -67,6 +67,10 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+
+    <footer class="row">
+        <div style="height: 5em"></div>
+    </footer>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
