--- a/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
+++ b/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
@@ -48,7 +48,7 @@ const jsonData = {{ spectral_line_data }};
         type: 'numeric',
         decimalsInFloat: 2,
         title: {
-          text: 'Wavelength',
+          text: 'Wavelength (nm)',
           style: {
               fontSize: '12px',
               fontFamily: 'Helvetica, Arial, sans-serif',
@@ -59,7 +59,7 @@ const jsonData = {{ spectral_line_data }};
       },
       yaxis: [{
         forceNiceScale: true,
-        decimalsInFloat: 3,
+        decimalsInFloat: 2,
         title: {
           text: 'TODO',
           style: {
