--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -23,7 +23,8 @@
     <table class="table" style="table-layout: fixed">
         <thead class=".thead-light">
         <tr>
-            <th scope="col" style="width: 12em">Preview</th>
+            <th scope="col" style="width: 5em">Preview</th>
+            <th scope="col" style="width: 9em">Spectral Line Profile</th>
             <th scope="col" style="width: 7em">Instrument</th>
             <th scope="col" style="width: 12em">Time of Observation</th>
             {% for column_name in additional_column_names %}
@@ -45,6 +46,13 @@
                 {{ metadata.oid }}
                 {% endif %}
                 </a>
+            </td>
+            <td>
+                {% if metadata.r0preview %}
+                <a href="{% url 'data_cube_detail' metadata.filename %}">
+                    <img style="width: 12em" src="{{metadata.r0preview.url}}" />
+                </a>
+                {% endif %}
             </td>
             <td scope="row">{{ metadata.instrument }}</td>
             <td scope="row">{{ metadata.date }}</td>
