--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -79,5 +79,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
+
+<script>
+/* Small helper script to defer loading of images. */
+function init() {
+  var deferredImages = document.getElementsByTagName('img');
+  for (let deferredImage of deferredImages) {
+  if (deferredImage.getAttribute('data-src')) {
+      deferredImage.setAttribute('src', deferredImage.getAttribute('data-src'));
+      deferredImage.setAttribute('data-src', '');
+    }
+  }
+}
+
+window.addEventListener('load', init);
+</script>
 </body>
 </html>
