--- a/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
+++ b/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
@@ -1,7 +1,7 @@
 {% with id=widget.attrs.id %}
-<div class="dropdown">
+<div class="dropdown" id="dropdown-{{ id }}">
   <button type="button" class="text-start form-select" id="dropdown-button-{{ id }}" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
-    Select {{full_field_name}}
+    None Selected
   </button>
 
   <div {% if id %}id="{{ id }}"{% endif %} class="{% if widget.attrs.class %}{{ widget.attrs.class }}{% endif %} dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
@@ -24,4 +24,37 @@
     {% endfor %}
   </div>
 </div>
+
+<script>
+
+(function() {
+  const dropdownId = 'dropdown-{{ id }}';
+  const dropdown = document.getElementById(dropdownId);
+
+  const dropdownButtonId = 'dropdown-button-{{ id }}';
+  const dropdownButton = document.getElementById(dropdownButtonId);
+
+  function updateDropdown() {
+    const checkboxes = dropdown.querySelectorAll('input[type="checkbox"]');
+    const selected = [];
+
+    for (let checkbox of checkboxes) {
+      if (checkbox.checked) {
+        selected.push(checkbox.value);
+      }
+    }
+
+    if (selected.length > 0) {
+      dropdownButton.innerText = `${selected.length} Selected`;
+    } else {
+      dropdownButton.innerText = 'None Selected';
+    }
+  }
+
+  dropdown.addEventListener('hide.bs.dropdown', updateDropdown);
+
+  updateDropdown();
+})();
+
+</script>
 {% endwith %}
