Show multi-value search results columns as CSLs

--- a/frontend/templates/frontend/column_value.html
+++ b/frontend/templates/frontend/column_value.html
@@ -1,5 +1,5 @@
 {% if array_value %}
-<ul class="list-unstyled">
+<ul class="list-unstyled comma-separated-list">
     {% for value in array_value %}
     <li>{{ value }}</li>
     {% endfor %}
