--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -71,7 +71,7 @@
     <div class="container row">
         {% if r0_json_data %}
         <div class="mb-5 col-6">
-            <h5>r<sub>0</sub></h5>
+            <h5>Seeing (r<sub>0</sub>)</h5>
             {% include "frontend/data_cube_detail/r0_graph.html" %}
         </div>
         {% endif %}
