--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -17,11 +17,19 @@
 
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             <figure class="figure">
-            {% if data_cube.animated_preview and data_cube.animated_preview.full_size %}
-            <img src="{{data_cube.animated_preview.full_size.url}}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
-            {% elif data_cube.previews and data_cube.previews.full_size %}
-            <img src="{{data_cube.previews.full_size.url}}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
-            {% endif %}
+                {% if data_cube.video_preview and data_cube.video_preview.video_wings %}
+                <div class="video-container">
+                    <div class="video-inlay" style="position: relative">
+                        <video id="video-wings" poster="{{data_cube.previews.full_size.url}}" src="{{data_cube.video_preview.video_wings.url}}" loop muted playsinline></video>
+                        <div id="video-wings-play-button">
+                            <div style="cursor: pointer; text-shadow: 0 0 2px rgb(0, 0, 0); color: rgb(230, 230, 230); position: absolute; left: 5px; bottom: 0px; font-size: 40px" onclick="const video = document.getElementById('video-wings'); video.play(); video.controls = true; const playButton = document.getElementById('video-wings-play-button'); playButton.style.display = 'None';"
+                                 class="bi bi-play-circle-fill"></div>
+                        </div>
+                    </div>
+                </div>
+                {% elif data_cube.previews and data_cube.previews.full_size %}
+                <img src="{{data_cube.previews.full_size.url}}" />
+                {% endif %}
             </figure>
         </div>
 
