--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -93,6 +93,12 @@ function init() {
 }
 
 window.addEventListener('load', init);
+
+// Activate all Bootstrap tooltips.
+const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
 </script>
 </body>
 </html>
