First step towards supporting multi-cube observations

--- a/frontend/templates/frontend/data_cube_detail/r0_graph.html
+++ b/frontend/templates/frontend/data_cube_detail/r0_graph.html
@@ -41,7 +41,7 @@ window.addEventListener('load', function() {
       colors: ['#00aa00', '#000000', '#4477ff', '#ff4477'],
       chart: {
         width: '100%',
-        height: '300px',
+        height: '350px',
         animations: {
           enabled: false,
         }
@@ -107,6 +107,9 @@ window.addEventListener('load', function() {
       },
       stroke: {
         width: [2, 2]
+      },
+      legend: {
+        height: 40
       },
       tooltip: {
         x: {
