--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -26,7 +26,7 @@
     <header class="row mb-3">
         <div class="row justify-content-between py-3">
             <h1 class="col-8 mt-3 display-4"><a style="color: #000000; text-decoration: none" href="{% url 'search' %}">Stockholm SST
-                Archive <span class="text-muted"><sup>Prototype</sup></span></a></h1>
+                Archive <span class="text-muted"><sup><small>Prototype</small></sup></span></a></h1>
 
             {% if user.is_authenticated %}
             <div class="col-2 text-end">
