--- a/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
+++ b/frontend/templates/frontend/data_cube_detail/spectral_line_profile_graph.html
@@ -44,7 +44,7 @@ window.addEventListener('load', function() {
         }
 
         const series = {
-            name: 'Scan',
+            name: 'Scan Average',
             type: 'line',
             data: data
         };
@@ -55,12 +55,13 @@ window.addEventListener('load', function() {
     var options = {
       chart: {
         width: '100%',
-        height: '300px',
+        height: '350px',
         animations: {
           enabled: false,
         },
         type: 'scatter'
       },
+      colors: ['#ff0000'],
       series: seriesData,
       markers: {
         size: [5],
@@ -109,7 +110,8 @@ window.addEventListener('load', function() {
         width: [1],
       },
       legend: {
-        show: false,
+        showForSingleSeries: true,
+        height: 40
       },
       tooltip: {
         enabled: false,
