Fixed misnomer in observation detail page

--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -17,7 +17,7 @@
 
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             {% if data_cube.video_preview or data_cube.previews %}
-            <h5>Preview (Wings)</h5>
+            <h5>Preview</h5>
             <figure class="figure">
                 {% if data_cube.video_preview and data_cube.video_preview.video_wings %}
                 <div class="video-container">
